# polyloly

./: .env.example  .gitignore  01_REPO_STRUCTURE.md  02_TRUTH_ENGINE_STATE_MACHINE.md  03_BINARY_PAIR_ARB_MATH.md  ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENTS.md  ARCHITECTURE_IMPROVEMENTS_2.md  IMPROVED_ARCHITECTURE.md  README.md  cursor-rules-esports-algotrader.mdc  esports-algotrader-docs.md  pyproject.toml
config/: base.yaml
docs/: DECISIONS.md  RUNBOOK.md
docs-archive/: 00_OVERVIEW.md  04_PNL_SIMULATION_SAFETY_MARGINS.md  interfaces.py  pnl_simulation.py
specs/: 01_TYPES_SPEC.md  02_TRUTH_ENGINE_SPEC.md  03_TRADING_STATE_MACHINE_SPEC.md  04_EVENT_BUS_SPEC.md  05_PAIR_ARB_SPEC.md  06_TEMPORAL_ARB_SPEC.md  07_EXECUTION_SPEC.md  08_RISK_SPEC.md  09_ADAPTERS_SPEC.md
src/: __init__.py
src/bot/: __init__.py  bus.py  clock.py  errors.py  logging.py  main.py  settings.py
src/domain/: __init__.py  types.py
src/domain/engines/: __init__.py  trading_engine.py  truth_engine.py
tests/: __init__.py  conftest.py  test_pair_math.py  test_truth_engine.py
